# ARM_M_TLM

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  build_cores.sh  instruction_tables.html  run_tests.sh  test_tables.py
docs/: ARMv7M_Implementation_Status.md  ARMv7M_Instructions.md  ARMv7M_Missing_Instructions.md  GDB_DEBUGGING.md  TEST_REPORTING.md
examples/: simple_test.hex
src/: Simulator.cpp  Simulator.h  main.cpp
src/bus/: BusCtrl.cpp  BusCtrl.h
src/cpu/: ARM_CortexM_Config.h  ARMv6M_Config.h  CPU.cpp  CPU.h  Execute.cpp  Execute.h  Instruction.cpp  Instruction.h  InstructionTables.cpp  InstructionTables.h  Registers.cpp  Registers.h
src/debug/: GDBServer.cpp  GDBServer.h
src/helpers/: Log.cpp  Log.h  Performance.cpp  Performance.h
src/memory/: Memory.cpp  Memory.h
src/peripherals/: InteractiveUART.cpp  InteractiveUART.h  NVIC.cpp  NVIC.h  Timer.cpp  Timer.h  Trace.cpp  Trace.h
tests/assembly/: ARMV7M_TEST_README.md  Makefile  README.md  armv7m_test.s  bl_test  bl_test.s  branch_test.s  c_test.c  comprehensive_test.s  data_processing_test.elf  data_processing_test.hex  data_processing_test.s  exception_link.ld  exception_test.s  instruction_size_test.s  linker_script.ld  load_store_multiple_test.s  load_store_test.elf  load_store_test.hex  load_store_test.s  miscellaneous_test.s  nvic_timer_test.s  simple_comprehensive_test.s  simple_load_store_multiple_test.s  simple_miscellaneous_test.s  systick_test.s  verify_armv7m.sh
tools/: InstructionTablesStandalone.cpp  InstructionTablesStandalone.h  generate_tables.py  test_runner.py
